--- a/SpringMVC-Mybatis-Shiro-redis-0.2-master/.settings/org.eclipse.wst.common.component
+++ b/SpringMVC-Mybatis-Shiro-redis-0.2-master/.settings/org.eclipse.wst.common.component
@@ -5,8 +5,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/init/sql"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
-        <property name="context-root" value="shiro.demo"/>
         <property name="java-output-path" value="/SpringMVC-Mybatis-Shiro-redis-0.2-master/target/classes"/>
+        <property name="context-root" value="SpringMVC-Mybatis-Shiro-redis-0.2-master"/>
     </wb-module>
 </project-modules>
